5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1578_1560.log
== SUBMITION (2019-03-20 18:01:19) 
-- CODE:
string = "Augusta Ada Bryron, a condessa de Lovelece,nasceu em 1815, na inglaterra."
print("Austring Ada Bryron, a condessa de Lovelace, nasceu em 1815, na Inglaterra."lower())
-- EXECUTION TIME:
0.128658
-- ERROR:
  File "/home/codebench/codes/1578/1560/main.py", line 2
    print("Austring Ada Bryron, a condessa de Lovelace, nasceu em 1815, na Inglaterra."lower())
                                                                                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:06:31) 
-- CODE:
string = "Augusta Ada Bryron, a condessa de Lovelece,nasceu em 1815, na inglaterra."
print("Austring Ada Bryron, a condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower())
-- EXECUTION TIME:
0.153333
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
austring ada bryron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 10:30:22) 
-- CODE:
string = "Augusta Ada Bryron, a condessa de Lovelece,nasceu em 1815, na inglaterra."
print("Austring Ada Bryron, a condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower())
-- EXECUTION TIME:
0.117973
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
austring ada bryron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:02:05) 
-- CODE:
string = "Augusta Ada Bryron, a condessa de Lovelece,nasceu em 1815, na inglaterra."
print("Augusto Ada Bryron, a condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower())
-- EXECUTION TIME:
0.15075
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusto ada bryron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:29:33) 
-- CODE:
string = "Augusta Ada Bryron, a condessa de Lovelece,nasceu em 1815, na inglaterra."
print("Augusto Ada Bryron, a condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower)
-- OUTPUT:
<built-in method lower of str object at 0x7f94b7fa28b0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:30:19) 
-- CODE:
string = "Augusta Ada Bryron, a condessa de Lovelece,nasceu em 1815, na inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada bryron, a condessa de lovelece,nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:30:24) 
-- CODE:
string = "Augusta Ada Bryron, a condessa de Lovelece,nasceu em 1815, na inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada bryron, a condessa de lovelece,nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:30:30) 
-- CODE:
string = "Augusta Ada Bryron, a condessa de Lovelece,nasceu em 1815, na inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.275844
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryron, a condessa de lovelece,nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:30:33) 
-- CODE:
string = "Augusta Ada Bryron, a condessa de Lovelece,nasceu em 1815, na inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.206873
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryron, a condessa de lovelece,nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:30:54) 
-- CODE:
string = "Augusta Ada Bryron, a condessa de Lovelece,nasceu em 1815, na inglaterra."
print(lower())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(lower())
NameError: name 'lower' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:31:42) 
-- CODE:
string = "Augusta Ada Bryron, a Condessa de Lovelece,nasceu em 1815, na inglaterra."
print(.lower())
-- ERROR:
File "XXXX", line 2
    print(.lower())
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:32:02) 
-- CODE:
string = "Augusta Ada Bryron, a Condessa de Lovelece,nasceu em 1815, na inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.205712
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryron, a condessa de lovelece,nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:32:03) 
-- CODE:
string = "Augusta Ada Bryron, a Condessa de Lovelece,nasceu em 1815, na inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.145777
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryron, a condessa de lovelece,nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:32:03) 
-- CODE:
string = "Augusta Ada Bryron, a Condessa de Lovelece,nasceu em 1815, na inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.118825
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryron, a condessa de lovelece,nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:32:03) 
-- CODE:
string = "Augusta Ada Bryron, a Condessa de Lovelece,nasceu em 1815, na inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.120657
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryron, a condessa de lovelece,nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:32:04) 
-- CODE:
string = "Augusta Ada Bryron, a Condessa de Lovelece,nasceu em 1815, na inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.117139
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryron, a condessa de lovelece,nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:32:04) 
-- CODE:
string = "Augusta Ada Bryron, a Condessa de Lovelece,nasceu em 1815, na inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.110944
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryron, a condessa de lovelece,nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:32:04) 
-- CODE:
string = "Augusta Ada Bryron, a Condessa de Lovelece,nasceu em 1815, na inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada bryron, a condessa de lovelece,nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:32:05) 
-- CODE:
string = "Augusta Ada Bryron, a Condessa de Lovelece,nasceu em 1815, na inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada bryron, a condessa de lovelece,nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:32:06) 
-- CODE:
string = "Augusta Ada Bryron, a Condessa de Lovelece,nasceu em 1815, na inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada bryron, a condessa de lovelece,nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:32:08) 
-- CODE:
string = "Augusta Ada Bryron, a Condessa de Lovelece,nasceu em 1815, na inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.187062
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryron, a condessa de lovelece,nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:32:10) 
-- CODE:
string = "Augusta Ada Bryron, a Condessa de Lovelece,nasceu em 1815, na inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada bryron, a condessa de lovelece,nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:51:40) 
-- CODE:
string = "Augusta Ada Bryron, a Condessa de Lovelece,nasceu em 1815, na Inglaterra."
print("Augusta Ada Bryron, a Condessa de Lovelece, nasceu em 1815, na Inglaterra.lowe()")
-- OUTPUT:
Augusta Ada Bryron, a Condessa de Lovelece, nasceu em 1815, na Inglaterra.lowe()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:52:05) 
-- CODE:
string = "Augusta Ada Bryron, a Condessa de Lovelece,nasceu em 1815, na Inglaterra."
print("Augusta Ada Bryron, a Condessa de Lovelece, nasceu em 1815, na Inglaterra.lowe()")
-- EXECUTION TIME:
0.257107
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
Augusta Ada Bryron, a Condessa de Lovelece, nasceu em 1815, na Inglaterra.lowe()
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:52:45) 
-- CODE:
string = "Augusta Ada Bryron, a Condessa de Lovelece,nasceu em 1815, na Inglaterra."
print(strin.lower())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(strin.lower())
NameError: name 'strin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:53:31) 
-- CODE:
string = "Augusta Ada Bryron,a Condessa de Lovelece,nasceu em 1815, na Inglaterra."
print(strin.lower())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(strin.lower())
NameError: name 'strin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:54:11) 
-- CODE:
string = ("Augusta Ada Bryron,a Condessa de Lovelece,nasceu em 1815, na Inglaterra)
print(strin.lower())
-- ERROR:
File "XXXX", line 1
    string = ("Augusta Ada Bryron,a Condessa de Lovelece,nasceu em 1815, na Inglaterra)
                                                                                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:54:32) 
-- CODE:
string = ("Augusta Ada Bryron,a Condessa de Lovelece,nasceu em 1815, na Inglaterra)
print(string.lower())
-- ERROR:
File "XXXX", line 1
    string = ("Augusta Ada Bryron,a Condessa de Lovelece,nasceu em 1815, na Inglaterra)
                                                                                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
